fixed a few css styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -332,7 +332,8 @@ color: black;
 border: 0.01 solid black;
 color: black;
 background-color: white;
-padding: 0.1em;
+width: 6em;
+height: 3em;
 margin-top: 2em;
 }
             
@@ -389,7 +390,8 @@ color: black;
 border: 0.01 solid black;
 color: black;
 background-color: white;
-padding: 0.1em;
+width: 6em;
+height: 3em;
 margin-top: 2em;
 }
             
