--- a/styles/style.css
+++ b/styles/style.css
@@ -294,6 +294,42 @@ padding: 1em;
 width: 100%;
 }
 
+        /* 4 ANIMACION FAQ */
+
+.shadow-drop-2-center {
+	-webkit-animation: shadow-drop-2-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: shadow-drop-2-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes shadow-drop-2-center {
+0% {
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0);
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+                box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+}
+100% {
+        -webkit-transform: translateZ(50px);
+                transform: translateZ(50px);
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+                box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+}
+        }
+@keyframes shadow-drop-2-center {
+0% {
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0);
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+                box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+}
+100% {
+        -webkit-transform: translateZ(50px);
+                transform: translateZ(50px);
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+                box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+}
+      }
+
 /* RESPONSIVE DESIGN FOR FAQ BOXES */
 
 @media (min-width: 800px){
@@ -418,4 +454,11 @@ outline: none;
         padding: 3em 0;
         text-align: center;
 }
+}
+
+/* CSS FOR MESSAGES-JS */
+
+.message-container{
+        font-weight: bold;
+        color: red;
 }
