--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,20 @@ transition-delay: 1s;
 
 /* FOUR SECTION: FOOTER */
 
+.container-footer{
+display: flex;
+flex-direction: column;
+}
+
+footer {
+padding: 0.20em;
+background-color: RGBA(123,248,227,0.10);
+text-align: center;
+font-weight: bold;
+color: black;
+padding-top: 1em;
+}
+
         /* 2 MUSEUMS */
 
 /* FIRST SECTION: MUSEUMS BOXES */        
