--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ text-align: center;
 line-height: 1em;
 }
 
-/* RESPONSIVE DESIGN GENERAL SETTINGS */
+/* RESPONSIVE DESIGN : TABLET & DESKTOP : GENERAL SETTINGS */
 
 @media (min-width: 800px){
 p{
@@ -126,18 +126,18 @@ transition-timing-function:linear;
 transition-delay: 1s;
 }
 
-/* RESPONSIVE DESIGN BOXES */
+/* RESPONSIVE DESIGN : TABLET & DESKTOP : BOXES  */
 
 @media (min-width: 800px){
-        .section-two{
+.section-two{
         margin: 0 auto;
         padding: 3em 0em; 
         }
-        .box-container{
+.box-container{
         display: flex;
         flex-direction: row;    
         }
-        .box{
+.box{
         width: 60em;
         }
 }
@@ -166,21 +166,21 @@ width: 20em;
 margin: 0 auto;
 padding: 1em 0;
 }
-
+        
 #section-one-boxes-museums > div {
 display: flex;
 justify-content: space-between;
 flex-direction: column;
 flex-wrap: wrap;
 }
-
+        
 .box-museums img {
 width: 20em;
 float: left;
 padding-right:  1em;
 margin-bottom: 1em;
 }
-  
+          
 .box-museums {
 background-color: white;
 font-size: 1.1em;
@@ -189,24 +189,39 @@ box-sizing: border-box;
 margin: 0.5em 5% 0 0;
 width: 100%;
 }
-
+        
 .a-museum{
 text-decoration: none;
 color: black;
 font-size: 0.9em;
 }
-
+        
 .box-museums-two{
-        padding: 1em;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        flex-wrap: wrap;
+padding: 1em;
+display: flex;
+justify-content: space-between;
+flex-direction: column;
+flex-wrap: wrap;
+}
+
+/* RESPONSIVE DESIGN : TABLET : MUSEUMS BOXES */
+
+@media (min-width: 600px){
+.section-one-museums{
+        width: 45em;
+        margin: 0 auto;
+        padding: 3em 0;
+        }
+.box-museums img{
+        width: 43em;
+        float: left;
+        padding-right:2em;      
+        }
 }
 
 /* RESPONSIVE DESIGN FOR MUSEUMS BOXES */
 
-@media (min-width: 800px){
+@media (min-width: 1000px){
 .section-one-museums{
         width: 70em;
         margin: 0 auto;
@@ -238,14 +253,14 @@ font-size: 0.9em;
         justify-content: space-between;
         flex-direction: column;
         flex-wrap: wrap;
-}
+        }
 .box-museums-two:hover {
         background-color: #E6DDF3;
         transition-property: height;
         transition-duration: 1s;
         transition-timing-function:linear;
         transition-delay: 1s;
-}
+        }
 }
 
         /* 3 ARTWORK OF THE DAY */
@@ -287,7 +302,7 @@ width: 100%;
 height: 100%;
 }
 
-/* RESPONSIVE DESIGN FOR ARTWORK OF THE DAY BOX */
+/* RESPONSIVE DESIGN : TABLET & DESKTOP : ARTWORK OF THE DAY BOX */
 
 @media (min-width: 800px){
 .section-one-artwork{
@@ -326,11 +341,9 @@ width: 100%;
 border: 0.01 solid black;
 color: black;
 background-color: white;
-width: 4em;
-height: 2em;
-font-size: 0.80em;
+width: 6em;
+height: 3em;
 margin-top: 2em;
-padding: 0.10em;
 }
                     
 .search {
@@ -354,22 +367,28 @@ font-size: 0.9em;
 font-style: italic;
 }
 
-        /* RESPONSIVE DESIGN FOR SEARCH BOX */
+/* RESPONSIVE DESIGN : TABLET : SEARCH BOX */
 
-@media (min-width: 800px){
+@media (min-width: 600px){
+.section-one-search{
+        width: 30em;
+        margin: 0 auto;
+        padding: 3em 0;
+        }
+.piece-of-art{
+        width: 40em;
+        margin-right: 1em;    
+        }
+}
+
+/* RESPONSIVE DESIGN : DESKTOP : SEARCH BOX */
+
+@media (min-width: 1000px){
 .section-one-search{
         width: 30em;
         margin: 0 auto;
         padding: 3em 0;
         text-align: center;
-        }
-.search-container button {
-        border: 0.01 solid black;
-        color: black;
-        background-color: white;
-        width: 6em;
-        height: 3em;
-        margin-top: 2em;
         }
 }
 
@@ -443,9 +462,19 @@ width: 100%;
 }
       }
 
-/* RESPONSIVE DESIGN FOR FAQ BOXES */
+/* RESPONSIVE DESIGN : TABLET : FAQ BOXES */
 
-@media (min-width: 800px){
+@media (min-width: 600px){
+.section-one-faq{
+        width: 45em;
+        margin: 0 auto;
+        padding: 3em 0;
+        }
+}
+
+/* RESPONSIVE DESIGN : DESKTOP : FAQ BOXES */
+
+@media (min-width: 1000px){
 .section-one-faq{
         width: 70em;
         margin: 0 auto;
@@ -516,9 +545,20 @@ outline: none;
         color: white;
 }
 
-/* RESPONSIVE DESIGN FOR LOGIN BOX */
+/* RESPONSIVE DESIGN : TABLET : LOGIN BOX */
 
-@media (min-width: 800px){
+@media (min-width: 600px){
+.section-one-login{
+        width: 30em;
+        margin: 0 auto;
+        padding: 3em 0;
+        text-align: center;
+        }
+}
+
+/* RESPONSIVE DESIGN : DESKTOP : LOGIN BOX */
+
+@media (min-width: 1000px){
 .section-one-login{
         width: 30em;
         margin: 0 auto;
@@ -530,7 +570,7 @@ outline: none;
         /* 7 REGISTER */
 
 .section-one-register {
-width: 20em;
+width: 22em;
 margin: 0 auto;
 padding: 3em 0;
 text-align: center;
@@ -582,9 +622,19 @@ outline: none;
         background-size: cover;
 }
 
-/* RESPONSIVE DESIGN FOR SIGN UP BOX */
+/* RESPONSIVE DESIGN : TABLET : SIGN UP BOX */
 
-@media (min-width: 800px){
+@media (min-width: 600px){
+.section-one-register{
+        width: 35em;
+        margin: 0 auto;
+        padding: 3em 0;
+        }
+}
+
+/* RESPONSIVE DESIGN : DESKTOP : SIGN UP BOX */
+
+@media (min-width: 1000px){
 .section-one-register{
         width: 30em;
         margin: 0 auto;
@@ -596,6 +646,6 @@ outline: none;
 /* CSS FOR MESSAGES-JS */
 
 .message-container{
-        font-weight: bold;
-        color: white;
+font-weight: bold;
+color: white;
 }
